# ComputerGraphics

./: .gitignore
Lab3-tinyrenderer/: CMakeLists.txt  camera.h  geometry.h  main.cpp  matrix.h  model.cpp  model.h  output.tga  tank.cpp  tank.h
Lab4-DX12/: App.cpp  App.h  CMakeLists.txt  D3D12Context.cpp  D3D12Context.h  Input.cpp  Input.h  Shaders.hlsl  Window.cpp  Window.h  main.cpp
